kubernetes/network-policy/cilium/ingress-allow.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-from-ingress
  namespace: ism-system
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: traefik
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
            - port: "8082"
              protocol: TCP
            - port: "8000"
              protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-from-ingress
  namespace: database
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: traefik
      toPorts:
        - ports:
            - port: "7474"
              protocol: TCP
            - port: "5601"
              protocol: TCP
            - port: "9200"
              protocol: TCP
            - port: "3000"
              protocol: TCP
