kubernetes/network-policy/cilium/localstack-np.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: localstack-network-policy
  namespace: ism-mq
spec:
  endpointSelector:
    matchLabels:
      app: localstack
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: go-operator
      toPorts:
        - ports:
            - port: "4566"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app: sync-operator
      toPorts:
        - ports:
            - port: "4566"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app: map-router
      toPorts:
        - ports:
            - port: "4566"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app: rag-agent
      toPorts:
        - ports:
            - port: "4566"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            faas_function: faas-m
      toPorts:
        - ports:
            - port: "4566"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            faas_function: faas-s
      toPorts:
        - ports:
            - port: "4566"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app: longhorn-manager
        - matchLabels:
            app: longhorn-csi-plugin
      toPorts:
        - ports:
            - port: "4566"
              protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: localstack-allow-dns
  namespace: ism-mq
spec:
  endpointSelector:
    matchLabels:
      app: localstack
  egress:
    - toServices:
        - k8sService:
            serviceName: kube-dns
            namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
