kubernetes/network-policy/cilium/longhorn-allow.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-allow-internal
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-manager
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - toServices:
        - k8sService:
            serviceName: kube-dns
            namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: longhorn-manager
      toPorts:
        - ports:
            - port: "9500"
              protocol: TCP
            - port: "9501"
              protocol: TCP
            - port: "9502"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: longhorn-csi-plugin
      toPorts:
        - ports:
            - port: "10000"
              protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-allow-csi
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-csi-plugin
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toServices:
        - k8sService:
            serviceName: kube-dns
            namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
