kubernetes/network-policy/cilium/longhorn-out.yaml
#apiVersion: "cilium.io/v2"
#kind: CiliumNetworkPolicy
#metadata:
#  name: longhorn-allow-backup-external
#  namespace: longhorn-system
#spec:
#  endpointSelector:
#    matchLabels:
#      app: longhorn-manager
#  egress:
#    - toEntities:
#        - world
#      toPorts:
#        - ports:
#            - port: "443"
#              protocol: TCP
#            - port: "80"
#              protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-allow-backup-internal
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-manager
  egress:
    - toServices:
        - k8sService:
            serviceName: localstack
            namespace: ism-mq
      toPorts:
        - ports:
            - port: "4566"
              protocol: TCP
