kubernetes/network-policy/cilium/ollama-np.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: ollama-network-policy
  namespace: ism-rag
spec:
  endpointSelector:
    matchLabels:
      app: ollama
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: rag-agent
      toPorts:
        - ports:
            - port: "11434"
              protocol: TCP
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
