kubernetes/network-policy/cilium/sync-operator-np.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: sync-operator-network-policy
  namespace: ism-system
spec:
  endpointSelector:
    matchLabels:
      app: sync-operator
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: prometheus
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app: localstack
      toPorts:
        - ports:
            - port: "4566"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
