kubernetes/network-policy/cilium/terraform-dns.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: terraform-dns
  namespace: ism-mq
spec:
  endpointSelector:
    matchLabels:
      app: terraform-init
  egress:
    - toServices:
        - k8sService:
            serviceName: kube-dns
            namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
    - toServices:
        - k8sService:
            serviceName: localstack
            namespace: ism-mq
      toPorts:
        - ports:
            - port: "4566"
              protocol: TCP
